Fix element trigger

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm install
+      - run: git remote set-url origin https://EvanHendersonRichtByte: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@github.com/EvanHendersonRichtByte/EvanHendersonRichtByte.github.io
       - run: git config --global user.email "adamhenderson3x3@gmail.com"
       - run: git config --global user.name "EvanHendersonRichtByte"
       - run: npm run deploy
