--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://evanhendersonrichtbyte.github.io/",
-  "name": "evanhendersonrichtbyte.github.io",
+  "homepage": "https://evanightly.github.io/",
+  "name": "evanightly.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
